tests/rules/samples/test_multiple_lines_escaping.c
//\
\ ola \
\ ola \
\ ola \
   \
   \
   \
\
\
\
\
oxi \
eita
